Fetch/save color to firebase

--- a/src/pages/ColorPage.css
+++ b/src/pages/ColorPage.css
@@ -1,3 +1,11 @@
 .color {
     height: 150px;
 }
+
+.swatch {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
